# Myelin

./: .gitignore  CNAME  Cargo.toml  README.md  change_proposal.md
.github/workflows/: ci.yml  release.yml
crates/myelin-cli/: Cargo.toml
crates/myelin-cli/src/: install.rs  main.rs
crates/myelin-core/: Cargo.toml
crates/myelin-core/src/: config.rs  lib.rs  paths.rs
crates/myelin-index/: Cargo.toml
crates/myelin-index/src/: embeddings.rs  graph.rs  lib.rs  redact.rs  skillfile.rs  staging.rs  store.rs  transcript.rs
crates/myelind/: Cargo.toml
crates/myelind/src/: control.rs  main.rs  mcp.rs  tools.rs
crates/myelind/tests/: mcp_protocol.rs
docs/: index.html  manifest.json  sw.js
packaging/systemd/: myelin.service
