[workspace]
resolver = "2"
members = [
    "crates/myelin-core",
    "crates/myelin-index",
    "crates/myelind",
    "crates/myelin-cli",
]

[workspace.package]
version = "0.0.2"
edition = "2021"

[workspace.dependencies]
myelin-core = { path = "crates/myelin-core" }
myelin-index = { path = "crates/myelin-index" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
