[package]
name = "myelind"
version.workspace = true
edition.workspace = true
description = "Myelin daemon: MCP server and control API for the personal skill-formation graph."

[dependencies]
myelin-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
clap.workspace = true
